--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -295,4 +295,7 @@
     <string name="outing_recent_application">신청 내역</string>
     <string name="outing_do_application">외출 신청하기</string>
     <string name="outing_description">기숙사에서 생활하는 동안 밖에 다녀올 일이 있다면 외출을 신청해 보세요.</string>
+    <string name="outing_cancel_application">신청 취소</string>
+    <string name="outing_companion_names">동행자: </string>
+    <string name="outing_are_you_sure_you_cancel_application">작성한 정보가 파기됩니다. 계속하시겠습니까?</string>
 </resources>
