--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="verify">인증</string>
     <string name="loading">…</string>
     <string name="accept">확인</string>
+    <string name="close">닫기</string>
     <string name="cancel">취소</string>
     <string name="yes">네</string>
     <string name="agree">동의</string>
@@ -291,13 +292,23 @@
 
     <!--outing-->
     <string name="outing_application">외출 신청</string>
-    <string name="outing_format_application_time">외출 신청 시간은 %s ~ %s 입니다</string>
+    <string name="outing_application_select_outing_time">외출 시간 선택</string>
+    <string name="outing_format_application_time">외출 신청 시간은 %02d:%02d ~ %02d:%02d 입니다</string>
     <string name="outing_recent_application">신청 내역</string>
     <string name="outing_do_application">외출 신청하기</string>
     <string name="outing_description">기숙사에서 생활하는 동안 밖에 다녀올 일이 있다면 외출을 신청해 보세요.</string>
     <string name="outing_cancel_application">신청 취소</string>
-    <string name="outing_companion_names">동행자: </string>
+    <string name="outing_companion_names">동행자</string>
     <string name="outing_are_you_sure_you_cancel_application">작성한 정보가 파기됩니다. 계속하시겠습니까?</string>
     <string name="outing_failed_to_fetch_current_applied_outing_application">외출 신청 정보를 조회할 수 없습니다</string>
-    <string name="outing_format_duration">%s ~ %s</string>
+    <string name="outing_format_duration_h_m">%02d:%02d</string>
+    <string name="outing_error_there_is_no_outing_types">외출 유형이 존재하지 않습니다</string>
+    <string name="outing_select_outing_type">선택</string>
+    <string name="outing_type">외출 유형</string>
+    <string name="outing_add_companions">동행자 추가</string>
+    <string name="outing_is_required">는 필수 입력 항목입니다</string>
+    <string name="outing_date">외출 일자</string>
+    <string name="format_date_yyyy_mm_dd_day_of_week">%04d.%02d.%02d (%s)</string>
+    <string name="outing_start_time">외출 시간</string>
+    <string name="outing_end_time">복귀 시간</string>
 </resources>
