--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -311,4 +311,5 @@
     <string name="format_date_yyyy_mm_dd_day_of_week">%04d.%02d.%02d (%s)</string>
     <string name="outing_start_time">외출 시간</string>
     <string name="outing_end_time">복귀 시간</string>
+    <string name="outing_hint_please_enter_description">내용을 입력해 주세요</string>
 </resources>
