--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -171,7 +171,13 @@
 
     <!--find id-->
     <string name="find_id_go_to_login_screen">로그인 화면으로</string>
+    
+    <string name="find_id_name">이름</string>
+    <string name="find_id_grade">학년</string>
+    <string name="find_id_class">반</string>
+    <string name="find_id_number">번호</string>
 
+    <string name="find_id">아이디 찾기</string>
     <string name="find_id_send_id_to_email">%s 으로 아이디가 전송되었습니다</string>
     <string name="find_id_select_school">학교를 선택해주세요</string>
 
