--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -181,8 +181,10 @@
     <string name="find_id_send_id_to_email">%s 으로 아이디가 전송되었습니다</string>
     <string name="find_id_select_school">학교를 선택해주세요</string>
 
-    <string name="find_id_error_account_not_found">위 정보로 가입된 계정이 없습니다</string>
+    <string name="find_id_show_menu">메뉴 보기</string>
 
+    <string name="find_id_error_account_not_found">위 정보로 가입된 계정이 없습니다</string>
+    <string name="find_id_error_school_not_found">학교 정보를 가져올 수 없습니다</string>
     <!--meal-->
     <string name="meal_todays_meal">오늘의 급식</string>
     <string name="meal_not_exists">급식이 없습니다</string>
