--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="id">아이디</string>
     <string name="password">비밀번호</string>
     <string name="verify">인증</string>
+    <string name="refresh">새로고침</string>
     <string name="loading">…</string>
     <string name="accept">확인</string>
     <string name="close">닫기</string>
@@ -327,4 +328,7 @@
     <string name="outing_application_selected_companions">선택한 학생</string>
     <string name="outing_application_format_grade_class_number_with_name">%s %s</string>
     <string name="outing_application_error_outing_type_not_selected">외출 유형이 선택되지 않았습니다.</string>
+
+
+    <string name="home_success_meal_refreshed">새로 고침 성공</string>
 </resources>
