--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -329,6 +329,16 @@
     <string name="outing_application_format_grade_class_number_with_name">%s %s</string>
     <string name="outing_application_error_outing_type_not_selected">외출 유형이 선택되지 않았습니다.</string>
 
+    <!--reset password-->
+    <string name="reset_password_account_verification_account_id_does_not_exist">일치하는 아이디가 존재하지 않습니다.</string>
+    <string name="reset_password_account_verification_enter_account_id">아이디 입력</string>
+    <string name="reset_password_account_verification_identification_verification">본인확인 인증</string>
+    <string name="reset_password_account_verification_success_account_id_matches_email">아이디와 일치하는 이메일입니다</string>
+    <string name="reset_password_account_verification_enter_account_id_invalid_format">아이디 형식이 일치하지 않습니다.</string>
+    <string name="reset_password_account_verification_enter_student_name">이름 입력</string>
+    <string name="reset_password_account_verification_enter_email">이메일 입력</string>
+    <string name="reset_password_set_password_password_success_changed">비밀번호가 변경되었습니다.</string>
+    <string name="reset_password_go_to_sign_in_screen">로그인 화면으로</string>
 
     <string name="home_success_meal_refreshed">새로 고침 성공</string>
 </resources>
