--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -303,7 +303,7 @@
     <!--outing-->
     <string name="outing_application">외출 신청</string>
     <string name="outing_application_select_outing_time">외출 시간 선택</string>
-    <string name="outing_format_application_time">외출 신청 시간은 %02d:%02d ~ %02d:%02d 입니다</string>
+    <string name="outing_format_application_time">외출 신청 시간은 %s ~ %s 입니다</string>
     <string name="outing_recent_application">신청 내역</string>
     <string name="outing_do_application">외출 신청하기</string>
     <string name="outing_description">기숙사에서 생활하는 동안 밖에 다녀올 일이 있다면 외출을 신청해 보세요.</string>
