--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -313,4 +313,11 @@
     <string name="reset_password_set_password_password_success_changed">비밀번호가 변경되었습니다.</string>
     <string name="reset_password_go_to_sign_in_screen">로그인 화면으로</string>
 
+    <!--edit profile-->
+    <string name="edit_profile">프로필 수정</string>
+    <string name="edit_profile_profile_image">프로필 사진</string>
+    <string name="edit_profile_profile_add">프로필 추가하기</string>
+    <string name="edit_profile_success">프로필이 변경되었습니다</string>
+    <string name="edit_profile_fail">프로필 변경에 실패했습니다</string>
+
 </resources>
