--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -316,7 +316,7 @@
     <string name="outing_are_you_sure_you_cancel_application">작성한 정보가 파기됩니다. 계속하시겠습니까?</string>
     <string name="outing_failed_to_fetch_current_applied_outing_application">외출 신청 정보를 조회할 수 없습니다</string>
     <string name="outing_format_duration_h_m">%s ~ %s</string>
-    <string name="outing_format_time_h_m">%02d:%02d</string>
+    <string name="outing_format_time">%02d:%02d ~ %02d:%02d</string>
     <string name="outing_error_there_is_no_outing_types">외출 유형이 존재하지 않습니다</string>
     <string name="outing_select_outing_type">선택</string>
     <string name="outing_type">외출 유형</string>
