--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -392,5 +392,7 @@
     <!--voting-->
     <string name="voting_submit">투표</string>
     <string name="voting_option_check">투표 항목 확인</string>
-
+    <string name="fresh_man_grade">1학년</string>
+    <string name="second_grade">2학년</string>
+    <string name="senior_grade">3학년</string>
 </resources>
