feat :: volunteers string resource 추가

--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -389,4 +389,6 @@
     <string name="edit_profile_success">프로필이 변경되었습니다</string>
     <string name="edit_profile_fail">프로필 변경에 실패했습니다</string>
 
+    <!--  volunteers  -->
+    <string name="volunteers_submit">봉사 신청</string>
 </resources>
