--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -378,6 +378,7 @@
     <string name="reset_password_account_verification_enter_account_id_invalid_format">아이디 형식이 일치하지 않습니다.</string>
     <string name="reset_password_account_verification_error_too_many_request">요청이 너무 많습니다 잠시 후 다시 시도해주세요</string>
     <string name="reset_password_account_verification_error_user_not_found">이름이나 이메일이 일치하지 않습니다.</string>
+    <string name="reset_password_account_verification_error_invalid_email_format">이메일 형식에 맞춰 작성해주세요</string>
     <string name="reset_password_account_verification_enter_student_name">이름 입력</string>
     <string name="reset_password_account_verification_enter_email">이메일 입력</string>
     <string name="reset_password_set_password_password_success_changed">비밀번호가 변경되었습니다.</string>
